# eyes

./: .gitignore  .pre-commit-config.yaml  README.md  inference.py  pyproject.toml  sample_results.csv
eyes/: trainer.py
eyes/datasets/: __init__.py  dann_dataset.py  eyes_dataset.py
eyes/models/: __init__.py  dann.py  resnet.py
eyes/parse/: labeled_data_parser.py  mrl_data_parser.py
notebooks/: DANN experiment.ipynb  Labeling data.ipynb  Train.ipynb
