[tool.poetry]
name = "eyes"
version = "0.1.0"
description = ""
authors = ["nordmtr <nordmtr@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.21.1"
scipy = "^1.7.0"
pandas = "^1.3.1"
matplotlib = "^3.4.2"
tqdm = "^4.61.2"
torch = "^1.9.0"
einops = "^0.3.0"
torchvision = "^0.10.0"
timm = {git = "https://github.com/rwightman/pytorch-image-models.git"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"
black = "^21.7b0"
flake8 = "^3.9.2"
isort = "^5.9.2"
pre-commit = "^2.13.0"
poethepoet = "^0.10.0"
jupyter-contrib-nbextensions = "^0.5.1"
autoflake = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
force-cuda11 = "python -m pip install torch==1.9.0+cu111 torchvision==0.10.0+cu111 -f https://download.pytorch.org/whl/torch_stable.html"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.venv
  | build
  | dist
  | notebooks
  | submodules
  )/
'''

[tool.isort]
profile = "black"
line_length = 120
src_paths = ["eyes"]
skip = "submodules"
